# matrix-mult-fhe

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  main.cpp  mat_inv.h  matrix_algo_singlePack.h  matrix_inversion_algo.h
app/common/: evaluation_metrics.h
app/fixed-hessian/: CMakeLists.txt
app/fixed-hessian/dataset/: diabetes_test_128.csv  diabetes_test_256.csv  diabetes_test_64.csv  diabetes_train_64.csv  heart_combined_128.csv  heart_test.csv  heart_test_128.csv  heart_train.csv  heart_train_128.csv
app/fixed-hessian/include/: fh_data_encoder.h  fh_encrypted_ar24.h  fh_encrypted_base.h  fh_encrypted_newcol.h  fh_he_ops.h  fh_he_trainer.h  lr_data_encoder.h  lr_encrypted_ar24.h  lr_encrypted_base.h  lr_encrypted_newcol.h  lr_he_ops.h  lr_he_trainer.h
app/fixed-hessian/src/: main_encrypted.cpp  main_plaintext.cpp
app/fixed-hessian/tmp/: CMakeLists.txt
app/fixed-hessian/tmp/dataset/: diabetes_test2_256.csv  diabetes_test3_256.csv  diabetes_test_256.csv  diabetes_train2_128.csv  diabetes_train3_128.csv  diabetes_train_128.csv  heart_test_128.csv  idash_test.csv  idash_train.csv  split.ipynb
app/fixed-hessian/tmp/include/: data_loader.h  logistic_regression.h  matrix.h
app/fixed-hessian/tmp/src/: data_loader.cpp  logistic_regression.cpp  main.cpp  matrix.cpp
app/linear-discriminant-analysis/: CMakeLists.txt  plaintext_hd_results.txt  plaintext_pid_results.txt  test_ar24_mult.cpp  test_iteration.py
app/linear-discriminant-analysis/data/: diabetes_test.csv  diabetes_train.csv  heart_disease_test.csv  heart_disease_train.csv
app/linear-discriminant-analysis/include/: lda_ar24.h  lda_data_encoder.h  lda_encrypted_base.h  lda_inference.h  lda_newcol.h  lda_plaintext_ops.h  lda_trainer.h
app/linear-discriminant-analysis/src/: benchmark_lda.cpp  main_encrypted.cpp  main_plaintext.cpp  test_inversion_only.cpp
app/linear-regression/: CMakeLists.txt
app/linear-regression/dataset/: testSet.csv  trainSet.csv  trainSet_orig.csv
app/linear-regression/include/: lr_ar24.h  lr_base.h  lr_naive.h  lr_newcol.h  lr_plaintext_ops.h
app/linear-regression/src/: main_ar24.cpp  main_encrypted.cpp  main_naive_vs_packed.cpp  main_newcol.cpp  main_plaintext.cpp
app/linear_regression/: CMakeLists.txt
app/linear_regression/data/: testSet.csv
app/linear_regression/include/: lr_as24.h  lr_base.h  lr_jkls18.h  lr_newcol.h
app/linear_regression/src/: main.cpp  main_as24.cpp  main_newcol.cpp
benchmark/: CMakeLists.txt  benchmark_config.h  memory_tracker.cpp  memory_tracker.h  readme.md  run_all_benchmarks.sh
benchmark/app/: README.md  generate_app_summary.sh  run_all_apps.sh  run_fh.sh  run_lda.sh  run_lr.sh
benchmark/applications/: run_fh.sh  run_lda.sh  run_lr.sh
benchmark/deep_multiplication/: CMakeLists.txt  benchmark_squaring.h  benchmark_squaring_ar24.cpp  benchmark_squaring_as24.cpp  benchmark_squaring_as24_bootstrap.cpp  benchmark_squaring_diag.cpp  benchmark_squaring_jkls18.cpp  benchmark_squaring_jkls18_bootstrap.cpp  benchmark_squaring_naive.cpp  benchmark_squaring_newcol.cpp  benchmark_squaring_newrow.cpp  benchmark_squaring_rt22.cpp  generate_summary_table.sh  run_squaring_benchmarks.sh
benchmark/inversion/: CMakeLists.txt  README.md  benchmark_inversion_ar24.cpp  benchmark_inversion_as24.cpp  benchmark_inversion_diag.cpp  benchmark_inversion_jkls18.cpp  benchmark_inversion_naive.cpp  benchmark_inversion_newcol.cpp  benchmark_inversion_newrow.cpp  benchmark_inversion_rt22.cpp  benchmark_inversion_simple_ar24.cpp  benchmark_inversion_simple_jkls18.cpp  benchmark_inversion_simple_newcol.cpp  benchmark_inversion_simple_rt22.cpp  debug_inversion.cpp  debug_iteration.cpp  generate_summary_table.sh  plaintext_convergence_test.cpp  run_inversion_benchmarks.sh  test_ar24_debug.cpp  test_d32.cpp  test_d32_all.cpp  test_newcol_all.cpp  test_rt22_trace.cpp  test_transpose_d32.cpp
benchmark/single_multiplication/: CMakeLists.txt  benchmark_ar24.cpp  benchmark_as24.cpp  benchmark_diag.cpp  benchmark_jkls18.cpp  benchmark_newcol.cpp  benchmark_newrow.cpp  benchmark_rt22.cpp  benchmark_singlemult.h  run_benchmarks.sh
benchmark/squaring/: CMakeLists.txt  README.md  benchmark_squaring.h  benchmark_squaring_ar24.cpp  benchmark_squaring_jkls18.cpp  benchmark_squaring_naive.cpp  benchmark_squaring_newcol.cpp  benchmark_squaring_rt22.cpp  generate_summary_table.sh  run_squaring_benchmarks.sh
src/: CMakeLists.txt  encryption.cpp  encryption.h  mat_inv.h  matrix_algo_multiPack.h  matrix_algo_singlePack.h  matrix_inversion_algo.h  naive_inversion.h  rotation.h
tests/: CMakeLists.txt  inverse_ar24_test.cpp  inverse_as24_test.cpp  inverse_diagonal_test.cpp  inverse_jkls18_test.cpp  inverse_naive_test.cpp  inverse_newCol_test.cpp  inverse_newRow_test.cpp  inverse_rt22_test.cpp  lda_jkls18_test.cpp  matrix_operation_test.cpp  mult_ar24_test.cpp  mult_as24_test.cpp  mult_jkls18_test.cpp  mult_newCol_test.cpp  mult_newRow_test.cpp  mult_rt22_test.cpp
utils/: CMakeLists.txt  convergence_test.cpp  csv_processor.h  diagonal_packing.h  diagonal_packing.hpp  matrix_utils.h  mse_calculator.h
